test/Fail/Issue2376Lambda.err
Issue2376Lambda.agda:11.1-12.19: error: [TerminationIssue]
Termination checking failed for the following functions:
  f
Problematic calls:
  f (id p)
    (at Issue2376Lambda.agda:12.11-12)
